hphp/hack/test/typecheck/await_in_expressions9.php.exp
File "await_in_expressions9.php", line 4, characters 9-15:
Await cannot be used as an expression (Parsing[1002])
